Convertimos el DF a csv para poder acceder al documento limpio.

--- a/EDA_Marta.ipynb
+++ b/EDA_Marta.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
        "[1614 rows x 41 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1201,16 +1201,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1], dtype=int64)"
+       "array([1])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1222,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1232,9 +1232,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1614"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#NUMBERCHILDREN: Tiene solo valores nulos, se puede eliminar.\n",
     "df_HR['NUMBERCHILDREN'].isnull().sum()"
@@ -1242,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1252,9 +1263,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SameAsMonthlyIncome</th>\n",
+       "      <th>MonthlyIncome</th>\n",
+       "      <th>MonthlyRate</th>\n",
+       "      <th>HourlyRate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>19537,0</td>\n",
+       "      <td>19537,0</td>\n",
+       "      <td>6462</td>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>19999,0</td>\n",
+       "      <td>19999,0</td>\n",
+       "      <td>5678</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>19232,0</td>\n",
+       "      <td>19232,0</td>\n",
+       "      <td>4933</td>\n",
+       "      <td>58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>17169,0</td>\n",
+       "      <td>17169,0</td>\n",
+       "      <td>26703</td>\n",
+       "      <td>82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7739</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1609</th>\n",
+       "      <td>10325,0</td>\n",
+       "      <td>10325,0</td>\n",
+       "      <td>5518</td>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1610</th>\n",
+       "      <td>4447,0</td>\n",
+       "      <td>4447,0</td>\n",
+       "      <td>23163</td>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1611</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2560</td>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1612</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>25952</td>\n",
+       "      <td>84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1613</th>\n",
+       "      <td>10845,0</td>\n",
+       "      <td>10845,0</td>\n",
+       "      <td>24208</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1614 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     SameAsMonthlyIncome MonthlyIncome  MonthlyRate HourlyRate\n",
+       "0                19537,0       19537,0         6462         51\n",
+       "1                19999,0       19999,0         5678         65\n",
+       "2                19232,0       19232,0         4933         58\n",
+       "3                17169,0       17169,0        26703         82\n",
+       "4                    NaN           NaN         7739         45\n",
+       "...                  ...           ...          ...        ...\n",
+       "1609             10325,0       10325,0         5518         51\n",
+       "1610              4447,0        4447,0        23163         57\n",
+       "1611                 NaN           NaN         2560         41\n",
+       "1612                 NaN           NaN        25952         84\n",
+       "1613             10845,0       10845,0        24208         75\n",
+       "\n",
+       "[1614 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#SameAsMonthlyIncome: parece un duplicado de la columna MonthlyIncome,se puede eliminar. \n",
     "df_HR[['SameAsMonthlyIncome', 'MonthlyIncome', 'MonthlyRate', 'HourlyRate']]"
@@ -1262,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1273,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1282,7 +1425,7 @@
        "array(['1000000000$'], dtype=object)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1294,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1304,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1324,14 +1467,6 @@
       "1613    M\n",
       "Name: Gender, Length: 1614, dtype: object\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\mgpal\\AppData\\Local\\Temp\\ipykernel_3964\\3872921605.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'M' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
-      "  df_HR.loc[df_HR['Gender'] == 0, 'Gender'] = 'M'\n"
-     ]
     }
    ],
    "source": [
@@ -1345,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1353,16 +1488,6 @@
      "output_type": "stream",
      "text": [
       "object\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:8: SyntaxWarning: invalid escape sequence '\\d'\n",
-      "<>:8: SyntaxWarning: invalid escape sequence '\\d'\n",
-      "C:\\Users\\mgpal\\AppData\\Local\\Temp\\ipykernel_3964\\1536083688.py:8: SyntaxWarning: invalid escape sequence '\\d'\n",
-      "  df_HR['DailyRate'] = df_HR['DailyRate'].str.replace('[^\\d\\.]', '', regex=True)\n"
      ]
     }
    ],
@@ -1385,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1393,16 +1518,6 @@
      "output_type": "stream",
      "text": [
       "object\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:8: SyntaxWarning: invalid escape sequence '\\d'\n",
-      "<>:8: SyntaxWarning: invalid escape sequence '\\d'\n",
-      "C:\\Users\\mgpal\\AppData\\Local\\Temp\\ipykernel_3964\\440013747.py:8: SyntaxWarning: invalid escape sequence '\\d'\n",
-      "  df_HR['HourlyRate'] = df_HR['HourlyRate'].str.replace('[^\\d\\.]', '', regex=True)\n"
      ]
     }
    ],
@@ -1425,9 +1540,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "object\n"
+     ]
+    }
+   ],
    "source": [
     "#Cambiamos el tipo de dato de la columna MonthlyIncome para que sea float.\n",
     "print(df_HR['MonthlyIncome'].dtype)\n",
@@ -1447,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1468,16 +1591,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dtype('int32')"
+       "dtype('int64')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1504,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1538,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1570,36 +1693,36 @@
        "      <th>DistanceFromHome</th>\n",
        "      <th>Education</th>\n",
        "      <th>EducationField</th>\n",
-       "      <th>employeecount</th>\n",
        "      <th>employeenumber</th>\n",
+       "      <th>EnvironmentSatisfaction</th>\n",
        "      <th>...</th>\n",
+       "      <th>TOTALWORKINGYEARS</th>\n",
+       "      <th>TrainingTimesLastYear</th>\n",
+       "      <th>WORKLIFEBALANCE</th>\n",
        "      <th>YearsAtCompany</th>\n",
        "      <th>YearsInCurrentRole</th>\n",
        "      <th>YearsSinceLastPromotion</th>\n",
        "      <th>YEARSWITHCURRMANAGER</th>\n",
-       "      <th>SameAsMonthlyIncome</th>\n",
        "      <th>DateBirth</th>\n",
-       "      <th>Salary</th>\n",
        "      <th>RoleDepartament</th>\n",
-       "      <th>NUMBERCHILDREN</th>\n",
        "      <th>RemoteWork</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>0 rows × 41 columns</p>\n",
+       "<p>0 rows × 37 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [Age, Attrition, BusinessTravel, DailyRate, Department, DistanceFromHome, Education, EducationField, employeecount, employeenumber, EnvironmentSatisfaction, Gender, HourlyRate, JobInvolvement, JobLevel, JobRole, JobSatisfaction, MaritalStatus, MonthlyIncome, MonthlyRate, NUMCOMPANIESWORKED, Over18, OverTime, PercentSalaryHike, PerformanceRating, RelationshipSatisfaction, StandardHours, StockOptionLevel, TOTALWORKINGYEARS, TrainingTimesLastYear, WORKLIFEBALANCE, YearsAtCompany, YearsInCurrentRole, YearsSinceLastPromotion, YEARSWITHCURRMANAGER, SameAsMonthlyIncome, DateBirth, Salary, RoleDepartament, NUMBERCHILDREN, RemoteWork]\n",
+       "Columns: [Age, Attrition, BusinessTravel, DailyRate, Department, DistanceFromHome, Education, EducationField, employeenumber, EnvironmentSatisfaction, Gender, HourlyRate, JobInvolvement, JobLevel, JobRole, JobSatisfaction, MaritalStatus, MonthlyIncome, MonthlyRate, NUMCOMPANIESWORKED, Over18, OverTime, PercentSalaryHike, PerformanceRating, RelationshipSatisfaction, StandardHours, StockOptionLevel, TOTALWORKINGYEARS, TrainingTimesLastYear, WORKLIFEBALANCE, YearsAtCompany, YearsInCurrentRole, YearsSinceLastPromotion, YEARSWITHCURRMANAGER, DateBirth, RoleDepartament, RemoteWork]\n",
        "Index: []\n",
        "\n",
-       "[0 rows x 41 columns]"
+       "[0 rows x 37 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1614,7 +1737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1624,7 +1747,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1636,7 +1759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1645,7 +1768,7 @@
        "array([nan, 'Married', 'Divorced', 'Single'], dtype=object)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1662,9 +1785,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' Mirar qué otras columnas podemos cambiar de typo porque no estén en el correcto, como NUMBERCHILDRENS.\\nVer si alguna otra columna tiene muchos nulos y no nos interesa (de cara a eliminarla). '"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\" Mirar qué otras columnas podemos cambiar de typo porque no estén en el correcto, como NUMBERCHILDRENS.\n",
     "Ver si alguna otra columna tiene muchos nulos y no nos interesa (de cara a eliminarla). \"\"\""
@@ -1672,9 +1806,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\" Usar como filtro los valores de la columna **Attrition**. Los valores == YES han abandonado la empresa. \\n    Buscar su nivel de Satisfacción. Columnas Age, Gender, EnviromentSatisfaction, JobInvolvement, \\n    JobSatisfaction, 'RelationshipSatisfaction, WORKLIFEBALANCE, YearsSinceLastPromotion, ¿ YEARSWITHCURRMANAGER ?, \\n    Salary, RoleDepartament, NUMBERCHILDREN, DistanceFromHome - RemoteWork. \""
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#FASE 4\n",
     "#Seudocódigo.\n",
@@ -1686,7 +1831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1717,22 +1862,22 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>19537,0</td>\n",
+       "      <td>19537.0</td>\n",
        "      <td>6462</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>19999,0</td>\n",
+       "      <td>19999.0</td>\n",
        "      <td>5678</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>19232,0</td>\n",
+       "      <td>19232.0</td>\n",
        "      <td>4933</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>17169,0</td>\n",
+       "      <td>17169.0</td>\n",
        "      <td>26703</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1747,12 +1892,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1609</th>\n",
-       "      <td>10325,0</td>\n",
+       "      <td>10325.0</td>\n",
        "      <td>5518</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1610</th>\n",
-       "      <td>4447,0</td>\n",
+       "      <td>4447.0</td>\n",
        "      <td>23163</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1767,7 +1912,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1613</th>\n",
-       "      <td>10845,0</td>\n",
+       "      <td>10845.0</td>\n",
        "      <td>24208</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1776,29 +1921,38 @@
        "</div>"
       ],
       "text/plain": [
-       "     MonthlyIncome  MonthlyRate\n",
-       "0          19537,0         6462\n",
-       "1          19999,0         5678\n",
-       "2          19232,0         4933\n",
-       "3          17169,0        26703\n",
-       "4              NaN         7739\n",
-       "...            ...          ...\n",
-       "1609       10325,0         5518\n",
-       "1610        4447,0        23163\n",
-       "1611           NaN         2560\n",
-       "1612           NaN        25952\n",
-       "1613       10845,0        24208\n",
+       "      MonthlyIncome  MonthlyRate\n",
+       "0           19537.0         6462\n",
+       "1           19999.0         5678\n",
+       "2           19232.0         4933\n",
+       "3           17169.0        26703\n",
+       "4               NaN         7739\n",
+       "...             ...          ...\n",
+       "1609        10325.0         5518\n",
+       "1610         4447.0        23163\n",
+       "1611            NaN         2560\n",
+       "1612            NaN        25952\n",
+       "1613        10845.0        24208\n",
        "\n",
        "[1614 rows x 2 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_HR[['MonthlyIncome','MonthlyRate']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_HR.to_csv('df_HR_limpio.csv', index=False)"
    ]
   }
  ],
@@ -1818,7 +1972,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
