Subo documento sin cambios.

--- a/EDA_Tania.ipynb
+++ b/EDA_Tania.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Importamos la librería pandas que necesitamos para la lectura, conversión y limpieza de los datos.\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "# Configuramos la visualización del DataFrame para visualizar todas las columnas.\n",
+    "pd.set_option('display.max_columns', None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +718,7 @@
        "[1614 rows x 41 columns]"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1446,7 +1448,7 @@
        "[1614 rows x 41 columns]"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1457,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1512,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1526,10 +1528,10 @@
       "Data columns (total 41 columns):\n",
       " #   Column                    Non-Null Count  Dtype  \n",
       "---  ------                    --------------  -----  \n",
-      " 0   Age                       1614 non-null   int64  \n",
+      " 0   Age                       1614 non-null   object \n",
       " 1   Attrition                 1614 non-null   object \n",
       " 2   BusinessTravel            842 non-null    object \n",
-      " 3   DailyRate                 1490 non-null   float64\n",
+      " 3   DailyRate                 1614 non-null   object \n",
       " 4   Department                302 non-null    object \n",
       " 5   DistanceFromHome          1614 non-null   int64  \n",
       " 6   Education                 1614 non-null   int64  \n",
@@ -1537,7 +1539,7 @@
       " 8   employeecount             1614 non-null   int64  \n",
       " 9   employeenumber            1183 non-null   object \n",
       " 10  EnvironmentSatisfaction   1614 non-null   int64  \n",
-      " 11  Gender                    1614 non-null   object \n",
+      " 11  Gender                    1614 non-null   int64  \n",
       " 12  HourlyRate                1614 non-null   object \n",
       " 13  JobInvolvement            1614 non-null   int64  \n",
       " 14  JobLevel                  1614 non-null   int64  \n",
@@ -1567,7 +1569,7 @@
       " 38  RoleDepartament           302 non-null    object \n",
       " 39  NUMBERCHILDREN            0 non-null      float64\n",
       " 40  RemoteWork                1614 non-null   object \n",
-      "dtypes: float64(2), int64(18), object(21)\n",
+      "dtypes: float64(1), int64(18), object(22)\n",
       "memory usage: 529.6+ KB\n",
       "None\n",
       "___________________ FORMA DEL DATAFRAME ____________________\n",
@@ -1582,7 +1584,7 @@
       "Age                            0\n",
       "Attrition                      0\n",
       "BusinessTravel               772\n",
-      "DailyRate                    124\n",
+      "DailyRate                      0\n",
       "Department                  1312\n",
       "DistanceFromHome               0\n",
       "Education                      0\n",
@@ -1625,7 +1627,7 @@
       "\n",
       "La cantidad de valores ÚNICOS por columna es de:\n",
       "\n",
-      "La columna Age: 43\n",
+      "La columna Age: 54\n",
       "La columna Attrition: 2\n",
       "La columna BusinessTravel: 4\n",
       "La columna DailyRate: 849\n",
@@ -1670,7 +1672,7 @@
       "\n",
       "La cantidad de valores DUPLICADOS por columna es de:\n",
       "\n",
-      "La columna Age: 1571\n",
+      "La columna Age: 1560\n",
       "La columna Attrition: 1612\n",
       "La columna BusinessTravel: 1610\n",
       "La columna DailyRate: 765\n",
@@ -1714,35 +1716,33 @@
       "____________________ RESUMEN ESTADÍSTICO ____________________\n",
       "____________________ Variables Numéricas __________________\n",
       "\n",
-      "                           count          mean          std     min      25%  \\\n",
-      "Age                       1614.0     36.920694     9.102157    18.0    30.00   \n",
-      "DailyRate                 1490.0    802.085235   403.246954   103.0   468.25   \n",
-      "DistanceFromHome          1614.0      4.527261    14.591913   -49.0     2.00   \n",
-      "Education                 1614.0      2.925031     1.022357     1.0     2.00   \n",
-      "employeecount             1614.0      1.000000     0.000000     1.0     1.00   \n",
-      "EnvironmentSatisfaction   1614.0      4.294919     6.993559     1.0     2.00   \n",
-      "JobInvolvement            1614.0      2.739777     0.711567     1.0     2.00   \n",
-      "JobLevel                  1614.0      2.068154     1.101344     1.0     1.00   \n",
-      "JobSatisfaction           1614.0      2.738538     1.106163     1.0     2.00   \n",
-      "MonthlyRate               1614.0  14284.495663  7110.414585  2094.0  8001.00   \n",
-      "NUMCOMPANIESWORKED        1614.0      2.673482     2.506152     0.0     1.00   \n",
-      "PercentSalaryHike         1614.0     15.165428     3.648610    11.0    12.00   \n",
-      "RelationshipSatisfaction  1614.0      2.704461     1.079031     1.0     2.00   \n",
-      "StockOptionLevel          1614.0      0.791202     0.842396     0.0     0.00   \n",
-      "TrainingTimesLastYear     1614.0      2.809789     1.297765     0.0     2.00   \n",
-      "YearsAtCompany            1614.0      7.132590     6.124237     0.0     3.00   \n",
-      "YearsSinceLastPromotion   1614.0      2.245973     3.235665     0.0     0.00   \n",
-      "YEARSWITHCURRMANAGER      1614.0      4.220570     3.562695     0.0     2.00   \n",
-      "DateBirth                 1614.0   1986.076208     9.101332  1963.0  1980.00   \n",
-      "NUMBERCHILDREN               0.0           NaN          NaN     NaN      NaN   \n",
+      "                           count          mean          std     min     25%  \\\n",
+      "DistanceFromHome          1614.0      4.527261    14.591913   -49.0     2.0   \n",
+      "Education                 1614.0      2.925031     1.022357     1.0     2.0   \n",
+      "employeecount             1614.0      1.000000     0.000000     1.0     1.0   \n",
+      "EnvironmentSatisfaction   1614.0      4.294919     6.993559     1.0     2.0   \n",
+      "Gender                    1614.0      0.398389     0.489718     0.0     0.0   \n",
+      "JobInvolvement            1614.0      2.739777     0.711567     1.0     2.0   \n",
+      "JobLevel                  1614.0      2.068154     1.101344     1.0     1.0   \n",
+      "JobSatisfaction           1614.0      2.738538     1.106163     1.0     2.0   \n",
+      "MonthlyRate               1614.0  14284.495663  7110.414585  2094.0  8001.0   \n",
+      "NUMCOMPANIESWORKED        1614.0      2.673482     2.506152     0.0     1.0   \n",
+      "PercentSalaryHike         1614.0     15.165428     3.648610    11.0    12.0   \n",
+      "RelationshipSatisfaction  1614.0      2.704461     1.079031     1.0     2.0   \n",
+      "StockOptionLevel          1614.0      0.791202     0.842396     0.0     0.0   \n",
+      "TrainingTimesLastYear     1614.0      2.809789     1.297765     0.0     2.0   \n",
+      "YearsAtCompany            1614.0      7.132590     6.124237     0.0     3.0   \n",
+      "YearsSinceLastPromotion   1614.0      2.245973     3.235665     0.0     0.0   \n",
+      "YEARSWITHCURRMANAGER      1614.0      4.220570     3.562695     0.0     2.0   \n",
+      "DateBirth                 1614.0   1986.076208     9.101332  1963.0  1980.0   \n",
+      "NUMBERCHILDREN               0.0           NaN          NaN     NaN     NaN   \n",
       "\n",
       "                              50%      75%      max  \n",
-      "Age                          36.0     43.0     60.0  \n",
-      "DailyRate                   798.0   1157.0   1499.0  \n",
       "DistanceFromHome              5.0     11.0     29.0  \n",
       "Education                     3.0      4.0      5.0  \n",
       "employeecount                 1.0      1.0      1.0  \n",
       "EnvironmentSatisfaction       3.0      4.0     49.0  \n",
+      "Gender                        0.0      1.0      1.0  \n",
       "JobInvolvement                3.0      3.0      4.0  \n",
       "JobLevel                      2.0      3.0      5.0  \n",
       "JobSatisfaction               3.0      4.0      4.0  \n",
@@ -1760,12 +1760,13 @@
       "___________________ Variables Categóricas _________________\n",
       "\n",
       "                    count unique                       top  freq\n",
+      "Age                  1614     54                        35    84\n",
       "Attrition            1614      2                        No  1355\n",
       "BusinessTravel        842      3             travel_rarely   586\n",
+      "DailyRate            1614    849                      nan$   124\n",
       "Department            302      3   Research & Development    196\n",
       "EducationField        869      6             Life Sciences   349\n",
       "employeenumber       1183   1079                     482,0     2\n",
-      "Gender               1614      2                         M   971\n",
       "HourlyRate           1614     72             Not Available    84\n",
       "JobRole              1614   1579                  mANager      4\n",
       "MaritalStatus         963      5                   Married   404\n",
@@ -1790,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1799,7 +1800,7 @@
        "534"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1812,7 +1813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1845,26 +1846,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "object\n",
-      "0        684,0$\n",
-      "1        699,0$\n",
-      "2        532,0$\n",
-      "3        359,0$\n",
-      "4       1319,0$\n",
-      "         ...   \n",
-      "1609     530,0$\n",
-      "1610     805,0$\n",
-      "1611     903,0$\n",
-      "1612    1229,0$\n",
-      "1613     566,0$\n",
-      "Name: DailyRate, Length: 1614, dtype: object\n"
+      "object\n"
      ]
     }
    ],
@@ -1887,7 +1876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1907,7 +1896,7 @@
        "Name: DailyRate, Length: 1614, dtype: float64"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1918,22 +1907,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dtype('int64')"
+       "0       51\n",
+       "1       52\n",
+       "2       42\n",
+       "3       47\n",
+       "4       46\n",
+       "        ..\n",
+       "1609    36\n",
+       "1610    45\n",
+       "1611    39\n",
+       "1612    36\n",
+       "1613    46\n",
+       "Name: Age, Length: 1614, dtype: int64"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Cambiamos el tipo de dato de la columna Age para que sea interger.\n",
+    "#Seguramente se puede automatizar esta parte...\n",
     "\n",
     "df_HR.loc[df_HR['Age'] == 'forty-seven', 'Age'] = '47'\n",
     "df_HR.loc[df_HR['Age'] == 'fifty-eight', 'Age'] = '58'\n",
@@ -1949,7 +1950,26 @@
     "df_HR.loc[df_HR['Age'] == 'twenty-four', 'Age'] = '24'\n",
     "\n",
     "df_HR['Age']= df_HR['Age'].astype(int)\n",
-    "df_HR['Age'].dtype"
+    "df_HR['Age']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_age(age_str):\n",
+    "    try:\n",
+    "        return int(age_str)\n",
+    "    except ValueError:\n",
+    "        return int(''.join(filter(str.isdigit, age_str)))\n",
+    "\n",
+    "# Aplica la función a la columna 'Age'\n",
+    "df_HR['Age'] = df_HR['Age'].apply(convert_age)\n",
+    "\n",
+    "# Verifica el tipo de datos después de la conversión\n",
+    "print(df_HR['Age'].dtype)"
    ]
   },
   {
@@ -2194,8 +2214,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" Mirar qué otras columnas podemos cambiar de typo porque no estén en el correcto, como NUMBERCHILDRENS.\n",
-    "Ver si alguna otra columna tiene muchos nulos y no nos interesa (de cara a eliminarla). \"\"\""
+    "\"\"\" \n",
+    "- Mirar qué otras columnas podemos cambiar de typo porque no estén en el correcto, como NUMBERCHILDRENS.\n",
+    "- Renombrar columnas usando .rename() -> df_HR.rename(columns = {'WORKLIFEBALANCE':'WorkLifeBalance'}, inplace = True). \n",
+    "Supongo que al diccionario se pueden añadir todos los nombres de las columnas que se quieran. Y supongo que tb se puede\n",
+    "resolver con un loc... Para múltiples columnas sería: \n",
+    "        nuevas_columnas = {columna: columna.lower().replace(\".\", \"\") for columna in df_final.columns}\n",
+    "        df.rename(columns = nuevas_columnas, inplace = True)\n",
+    "\n",
+    "- Ver si alguna otra columna tiene muchos nulos y no nos interesa (de cara a eliminarla). \n",
+    "\"\"\""
    ]
   },
   {
@@ -2206,10 +2234,12 @@
    "source": [
     "#FASE 4\n",
     "#Seudocódigo.\n",
-    "\"\"\" Usar como filtro los valores de la columna **Attrition**. Los valores == YES han abandonado la empresa. \n",
-    "    Buscar su nivel de Satisfacción. Columnas Age, Gender, EnviromentSatisfaction, JobInvolvement, \n",
-    "    JobSatisfaction, 'RelationshipSatisfaction, WORKLIFEBALANCE, YearsSinceLastPromotion, ¿ YEARSWITHCURRMANAGER ?, \n",
-    "    Salary, RoleDepartament, NUMBERCHILDREN, DistanceFromHome - RemoteWork. \"\"\""
+    "\"\"\" \n",
+    "- Usar como filtro los valores de la columna **Attrition**. Los valores == YES han abandonado la empresa. \n",
+    "- Buscar su nivel de Satisfacción. Columnas Age, Gender, EnviromentSatisfaction, JobInvolvement, \n",
+    "JobSatisfaction, 'RelationshipSatisfaction, WORKLIFEBALANCE, YearsSinceLastPromotion, ¿ YEARSWITHCURRMANAGER ?, \n",
+    "Salary, RoleDepartament, NUMBERCHILDREN, DistanceFromHome - RemoteWork. \n",
+    "\"\"\""
    ]
   },
   {
