--- a/EDA_Reyes.ipynb
+++ b/EDA_Reyes.ipynb
@@ -820,9 +820,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Attrition                    0.000000\n",
+       "BusinessTravel              47.831475\n",
+       "DailyRate                    7.682776\n",
+       "Department                  81.288724\n",
+       "DistanceFromHome             0.000000\n",
+       "Education                    0.000000\n",
+       "EducationField              46.158612\n",
+       "EmployeeNumber              26.703841\n",
+       "EnvironmentSatisfaction      0.000000\n",
+       "Gender                       0.000000\n",
+       "HourlyRate                   5.204461\n",
+       "JobInvolvement               0.000000\n",
+       "JobLevel                     0.000000\n",
+       "JobRole                      0.000000\n",
+       "JobSatisfaction              0.000000\n",
+       "MaritalStatus               40.334572\n",
+       "MonthlyIncome               52.230483\n",
+       "MonthlyRate                  0.000000\n",
+       "NumCompaniesWorked           0.000000\n",
+       "Over18                      55.824040\n",
+       "OverTime                    41.883519\n",
+       "PercentSalaryHike            0.000000\n",
+       "PerformanceRating           12.081784\n",
+       "RelationshipSatisfaction     0.000000\n",
+       "StandardHours               74.039653\n",
+       "StockOptionLevel             0.000000\n",
+       "TotalWorkingYears           32.589839\n",
+       "TrainingTimesLastYear        0.000000\n",
+       "WorkLifeBalance              6.691450\n",
+       "YearsAtCompany               0.000000\n",
+       "YearsInCurrentRole          97.893432\n",
+       "YearsSinceLastPromotion      0.000000\n",
+       "YearsWithCurrManager         0.000000\n",
+       "DateBirth                    0.000000\n",
+       "RoleDepartament             81.288724\n",
+       "RemoteWork                   0.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculamos el porcentaje de nulos que tenemos para cada columna categórica\n",
     "porc_nulos = (df_HR.isnull().sum() / df_HR.shape[0]) * 100\n",
