Gestión de nulos (categóricas)

--- a/EDA_Reyes.ipynb
+++ b/EDA_Reyes.ipynb
@@ -793,63 +793,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Age                           int64\n",
-       "Attrition                    object\n",
-       "BusinessTravel               object\n",
-       "DailyRate                   float64\n",
-       "Department                   object\n",
-       "DistanceFromHome              int64\n",
-       "Education                     int64\n",
-       "EducationField               object\n",
-       "EmployeeNumber               object\n",
-       "EnvironmentSatisfaction       int64\n",
-       "Gender                       object\n",
-       "HourlyRate                  float64\n",
-       "JobInvolvement                int64\n",
-       "JobLevel                      int64\n",
-       "JobRole                      object\n",
-       "JobSatisfaction               int64\n",
-       "MaritalStatus                object\n",
-       "MonthlyIncome               float64\n",
-       "MonthlyRate                   int64\n",
-       "NumCompaniesWorked            int64\n",
-       "Over18                       object\n",
-       "OverTime                     object\n",
-       "PercentSalaryHike             int64\n",
-       "PerformanceRating            object\n",
-       "RelationshipSatisfaction      int64\n",
-       "StandardHours                object\n",
-       "StockOptionLevel              int64\n",
-       "TotalWorkingYears            object\n",
-       "TrainingTimesLastYear         int64\n",
-       "WorkLifeBalance              object\n",
-       "YearsAtCompany                int64\n",
-       "YearsInCurrentRole           object\n",
-       "YearsSinceLastPromotion       int64\n",
-       "YearsWithCurrManager          int64\n",
-       "DateBirth                     int64\n",
-       "RoleDepartament              object\n",
-       "RemoteWork                   object\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_HR.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -2538,7 +2481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.-1"
   }
  },
  "nbformat": 4,
